# agilab

./: .aider.conf.yml  .coverage-agi-core  .coverage-agi-env  .coverage-agilab  .coveragerc.agi-core  .coveragerc.agi-env  .coveragerc.agi-gui  .env.example  .gitignore  ADOPTION.md  AGENT.md  AGENTS.md  AGENT_CONVENTIONS.md  AGENT_LEARNINGS.md  AGENT_SKILLS.md  CHANGELOG.md  CONTRIBUTING.md  ETHICALML_SUBMISSION_DRAFT.md  GITHUB_REPO_POSITIONING.md  LAUNCH_EXECUTION_CHECKLIST.md  LAUNCH_POST_DRAFTS.md  LICENSE  MANIFEST.in  Makefile  NEWCOMER_ADOPTION_PLAN.md  PROMOTE.md  README.md  README.pypi.md  README.rst  RUNBOOK.md  SECURITY.md  STAR_GROWTH_PLAN.md  WEEKLY_GROWTH_TRACKER.md  WINDOWS_TEST_FAILURES.md  _version.py  agent-context-rules.json  agenticweb.md  agilab-capabilities.json  agilab-capabilities.schema.json  agilab-capability-rules.yml  (+33 more)
src/agi/fwk/cluster/: pyproject.toml
src/agi/fwk/cluster/src/agi_runner/: __init__.py  agi_runner.py
src/agilab/apps-pages/view_app_ui/: README.md  pyproject.toml
src/agilab/apps-pages/view_app_ui/src/view_app_ui/: view_app_ui.py
src/agilab/apps-pages/view_autoencoder_latenspace/: pyproject.toml
src/agilab/apps-pages/view_autoencoder_latentspace/: README.md  pyproject.toml
src/agilab/apps-pages/view_barycentric/: README.md  pyproject.toml
src/agilab/apps-pages/view_data_io_decision/: README.md  pyproject.toml
src/agilab/apps-pages/view_forecast_analysis/: README.md  pyproject.toml
src/agilab/apps-pages/view_inference_analysis/: README.md  pyproject.toml
src/agilab/apps-pages/view_live_artifacts/: README.md  pyproject.toml
src/agilab/apps-pages/view_maps/: README.md  pyproject.toml
src/agilab/apps-pages/view_maps/src/view_maps/: view_maps.py
src/agilab/apps-pages/view_maps_3d/: README.md  pyproject.toml
src/agilab/apps-pages/view_maps_network/: README.md  pyproject.toml
src/agilab/apps-pages/view_pytorch_playground/: README.md  pyproject.toml
src/agilab/apps-pages/view_queue_resilience/: README.md  pyproject.toml
src/agilab/apps-pages/view_relay_resilience/: README.md  pyproject.toml
src/agilab/apps-pages/view_routing_model_comparison/: README.md  pyproject.toml
src/agilab/apps-pages/view_scenario_cockpit/: README.md  pyproject.toml
src/agilab/apps-pages/view_shap_explanation/: README.md  pyproject.toml
src/agilab/apps-pages/view_training_analysis/: README.md  pyproject.toml
src/agilab/apps-pages/view_tri_gtia/: README.md  pyproject.toml
src/agilab/apps-pages/view_uav_queue_analysis/: README.md  pyproject.toml
src/agilab/apps/agent_app_template/: pyproject.toml  uv.toml
src/agilab/apps/agent_app_template/src/: app_settings.toml  args_ui_snippet.py  custom_ui.py
src/agilab/apps/flight_clone_project/: README.md  app_test.py  distribution.json  pyproject.toml  uv_config.toml
src/agilab/apps/flight_clone_project/dataset_assets/: beams.csv  norad_3le.txt  satellites.csv
src/agilab/apps/flight_clone_project/src/: app_args_form.py  app_settings.toml
src/agilab/apps/flight_clone_project/test/: _test_call_worker.py  _test_flight_clone_manager.py  _test_flight_clone_worker.py  test_df.ipynb  test_flight_clone_manager.py  test_flight_clone_worker.py
src/agilab/apps/flight_clone_project/tools/: example_waypoints.geojson  generate_waypoints_basic.py  generate_waypoints_complex.py  synthetic_airports.geojson
src/agilab/views/: install.sh  maps-network-graph  pyproject.toml
src/agilab/views/autoencoder-latentspace/: pyproject.toml
src/agilab/views/barycentric-graph/: pyproject.toml
src/agilab/views/maps/: pyproject.toml
src/agilab/views/maps-3d/: pyproject.toml
src/agilab/views/maps-network-graph/: pyproject.toml
src/fwk/core/: MANIFEST.in  README.md  gen-app-script.py  install.sh  pyproject.toml  run-all-test.py  setup
src/fwk/core/agi-core/: pyproject.toml
src/fwk/core/agi-core/src/: agi_cluster
src/fwk/core/agi_core/: pyproject.toml
src/fwk/core/agi_core/src/: agi_env
src/fwk/core/cluster/: pyproject.toml
src/fwk/core/env/: pyproject.toml
src/fwk/core/env/src/: pyproject.toml
src/fwk/core/node/: pyproject.toml  uv_config.toml
src/fwk/core/node/src/: README.md
src/fwk/core/test/: test_agent_worker.py  test_agi_distributor.py  test_agi_manager.py  test_agi_runner.py  test_base_worker.py  test_dag_worker.py  test_pandas_worker.py  test_polars_worker.py  test_work_dispatcher.py
src/fwk/env/: README.md  pyproject.toml
src/fwk/env/resources/.agilab/: .env  balancer_model.pkl
src/fwk/env/src/agi_env/: agi_env.py  post_install.py
src/fwk/env/test/: clean_csv.py  test_agi_env.py
src/fwk/gui/: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/fwk/gui/src/agi_gui/: AGILAB.py  lab_run.py  pagelib.py
src/fwk/gui/src/agi_lab/: AGILAB.py  lab_run.py  pagelib.py
src/fwk/gui/test/: test-streamlit.sh
src/fwk/lab/: README.md  pyproject.toml
src/fwk/lab/src/agi_lab/: lab_run.py  pagelib.py
test/: __init__.py  _pypi_publish.py  _show_dependencies.py  _test-install-enduser.sh  _workflow_run_manifest_process_support.py  conftest.py  pyproject.toml  test-dependencies.py  test-run-enduser.sh  test_about_agilab_helpers.py  test_action_execution.py  test_adoption_report.py  test_agent_commit_provenance_guard.py  test_agent_config_and_capabilities.py  test_agent_context_router.py  test_agent_instruction_contract.py  test_agent_run.py  test_agent_skill_catalog.py  test_agent_skill_quality_guard.py  test_agent_tool_safety.py  test_agent_trace.py  test_agent_workflows.py  test_agenticweb_manifest.py  test_agi_core_change_guard.py  test_agi_env.py  test_agi_pages_chart_spec.py  test_agi_pages_runtime.py  test_agi_web_visual_regression.py  test_agilab_audit.py  test_agilab_capabilities_lint.py  test_agilab_capabilities_manifest.py  test_agilab_dev_shortcuts.py  test_agilab_module_layout.py  test_agilab_streamlit_launcher.py  test_agilab_web_robot.py  test_agilab_widget_robot.py  test_agilab_widget_robot_full.py  test_agilab_widget_robot_matrix.py  test_analysis_page_helpers.py  test_app_args.py  (+306 more)
test/fixtures/audit_quality/: strong_agilab_audit.md  weak_agilab_audit.md
(+3556 files in other folders)
