[project]
version = "2026.05.05.post2"
name = "agilab"
description = "AGILAB is a reproducible AI/ML workbench for engineering teams."
requires-python = ">=3.11"
readme = "README.pypi.md"
authors = [
    { name = "Jean-Pierre Morard" }
]
maintainers = [{ name = "Jean-Pierre Morard" }]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = [
    "python",
    "machine-learning",
    "ai-experimentation",
    "reproducibility",
    "reproducible-research",
    "mlops",
    "workflow-orchestration",
    "distributed-computing",
    "distributed-execution",
    "streamlit",
    "mlflow",
    "experiment-tracking",
    "dask",
    "jupyter",
    "jupyter-notebook",
    "cython",
    "free-threaded-python",
    "agentic-ai",
    "ai-agents",
    "codex",
    "claude",
]
dependencies = ["agi-core==2026.05.05.post1", "agi-gui==2026.05.05.post1", "astor>=0.8.1", "legacy-cgi>=2.6.4; python_version >= '3.13'", "mlflow>=3.11.1", "mlx>=0.31.2; sys_platform == 'darwin' and platform_machine == 'arm64'", "mlx-lm>=0.31.3; sys_platform == 'darwin' and platform_machine == 'arm64'", "networkx>=3.6.1", "numpy>=1.14.1", "pandas>=2.3.0", "pathspec>=1.1.0", "pydantic>=2.13.3", "standard-imghdr>=3.13.0; python_version >= '3.13'", "streamlit>=1.56.0", "tomli_w>=1.2.0"]

[project.urls]
Documentation = "https://thalesgroup.github.io/agilab"
Source = "https://github.com/ThalesGroup/agilab"
Repository = "https://github.com/ThalesGroup/agilab"
Issues = "https://github.com/ThalesGroup/agilab/issues"
Discussions = "https://github.com/ThalesGroup/agilab/discussions"
Changelog = "https://github.com/ThalesGroup/agilab/releases"

[project.scripts]
agilab = "agilab.lab_run:main"

[project.optional-dependencies]
ai = ["openai>=2.32.0"]
viz = ["matplotlib>=3.10.0", "plotly>=6.7.0"]
offline = ["accelerate>=0.34.2; python_version >= '3.12'", "gpt-oss>=0.0.8; python_version >= '3.12'", "requests>=2.32.0; python_version >= '3.12'", "torch>=2.8.0; python_version >= '3.12'", "transformers>=4.57.0; python_version >= '3.12'", "universal-offline-ai-chatbot>=0.1.0; python_version >= '3.12'"]







































































































































































[dependency-groups]
dev = [
    "agi-core",
    "build",
    "geojson>=3.2.0",
    "ipython",
    "pip",
    "pytest",
    "pytest-cov",
    "pytest-local-badge",
    "pytest-asyncio",
    "setuptools",
    "simpy>=4.1,<5",
    "twine",
    "wheel",
    "ydata-profiling",
    "genbadge[coverage]",
    "pypi-cleanup",
]

[tool.uv.extra-build-dependencies]
htmlmin = ["legacy-cgi"]
ydata-profiling = ["standard-imghdr"]

[tool.uv.sources.agi-core]
    path = "./src/agilab/core/agi-core"
    editable = true

[tool.uv.sources.agi-env]
    path = "./src/agilab/core/agi-env"
    editable = true

[tool.uv.sources.agi-gui]
    path = "./src/agilab/lib/agi-gui"
    editable = true

[tool.uv.sources.agi-node]
    path = "./src/agilab/core/agi-node"
    editable = true

[tool.uv.sources.agi-cluster]
    path = "./src/agilab/core/agi-cluster"
    editable = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "agilab",
    "agilab.about_page*",
    "agilab.resources*",
]
exclude = [
    "agilab.core*",
    "agilab.test*",
    "agilab.apps.*",
    ".idea*",
    "test*",
    "build*",
    ".venv*"
]

[tool.setuptools.package-data]
agilab = [
    "resources/*.*",
    "resources/help/*",
    "examples/README.md",
    "examples/*/README.md",
    "examples/*/AGI_*.py",
    "examples/inter_project_dag/*.py",
    "examples/inter_project_dag/*.json",
    "examples/mlflow_auto_tracking/*.py",
    "examples/mlflow_auto_tracking/*.json",
    "examples/notebook_to_dask/*.py",
    "examples/notebook_to_dask/*.json",
    "examples/notebook_to_dask/*.toml",
    "examples/notebook_to_dask/*.ipynb",
    "examples/notebook_quickstart/*.ipynb",
    "examples/notebook_migrations/*/README.md",
    "examples/notebook_migrations/*/analysis_artifacts/*.csv",
    "examples/notebook_migrations/*/analysis_artifacts/*.json",
    "examples/notebook_migrations/*/data/*.csv",
    "examples/notebook_migrations/*/migrated_project/*.dot",
    "examples/notebook_migrations/*/migrated_project/*.toml",
    "examples/notebook_migrations/*/notebooks/*.ipynb",
    "examples/service_mode/*.py",
    "examples/service_mode/*.json",
    "pages/*.py",
    "apps/install.py",
    "apps/builtin/*/pyproject.toml",
    "apps/builtin/*/README.md",
    "apps/builtin/*/lab_steps.toml",
    "apps/builtin/*/pipeline_view.dot",
    "apps/builtin/*/notebook_export.toml",
    "apps/builtin/*/notebook_import_views.toml",
    "apps/builtin/*/src/**/*.py",
    "apps/builtin/*/src/**/*.pyx",
    "apps/builtin/*/src/**/*.toml",
    "apps/builtin/*/src/*.json",
    "apps/builtin/*/src/**/*.csv",
    "apps/builtin/*/src/**/*.dot",
    "apps/builtin/*/src/*/*.7z",
    "apps/builtin/*/src/*/sample_data/*.json",
    "apps-pages/README.md",
    "apps-pages/*/pyproject.toml",
    "apps-pages/*/*.py",
    "apps-pages/*/src/*/*.py",
    "*.toml",
    "*.ipynb",
]

[tool.setuptools.exclude-package-data]
agilab = [
    # Keep internal tests out of the distribution.
    "test/*",
    # Drop local build artifacts from packaged built-in apps.
    "apps/builtin/*/src/__pycache__/*",
    "apps/builtin/*/src/*/__pycache__/*",
    "apps/builtin/*/src/*/*/__pycache__/*",
    "apps/builtin/*/src/*.pyc",
    "apps/builtin/*/src/*/*.pyc",
    "apps/builtin/*/src/*/*/*.pyc",
    "apps/builtin/*/src/*.egg-info/*",
    "apps/builtin/*/src/*/*.egg-info/*",
    "apps/builtin/*/src/*/*.c",
]

[tool.mypy]
mypy_path = [
    "stubs",
]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pyment]
source_dir = "agilab"
format = "google"

[tool.pytest.ini_options]
# Let pytest discover tests from repo root
testpaths = [
  "test",
  "src/agilab/core/test",
  "src/agilab/core/agi-env/test",
  "src/agilab/lib/agi-gui/test",
]

# Make the core packages importable when running pytest from the repo root
pythonpath = [
  "src",
  "src/agilab/core/agi-env/src",
  "src/agilab/lib/agi-gui/src",
  "src/agilab/core/agi-node/src",
  "src/agilab/core/agi-cluster/src",
]

# (merge everything you had inline here)
asyncio_mode = "auto"
markers = [
  "integration: live/external integration checks (excluded from default CI suite)",
  "ui_robot: browser-driven AGILAB UI robot checks (opt-in; launches Streamlit/Playwright)",
]
# addopts = "--import-mode=importlib"   # if you had it
filterwarnings = [
  "ignore:ast\\.Num is deprecated.*:DeprecationWarning:ast",
  "ignore:Theme names and color schemes are lowercase.*:DeprecationWarning:IPython\\.core\\.ultratb",
  "ignore:'oneOf' deprecated - use 'one_of':Warning:matplotlib\\._fontconfig_pattern",
  "ignore:'parseString' deprecated - use 'parse_string':Warning:matplotlib\\._fontconfig_pattern",
  "ignore:'resetCache' deprecated - use 'reset_cache':Warning:matplotlib\\._fontconfig_pattern",
  "ignore:'enablePackrat' deprecated - use 'enable_packrat':Warning:matplotlib\\._mathtext",
]

addopts = [
  "--cov=agilab", "--cov=agi_core", "--cov=agi_env", "--cov=agi_gui", "--cov=agi_cluster", "--cov=agi_node", "--cov=src/agilab/apps-pages",
  "--cov-report=term-missing:skip-covered"
]

[tool.coverage.run]
branch = true
source = ["agilab", "agi_core", "agi_env", "agi_gui", "agi_cluster", "agi_node", "src/agilab/apps-pages"]
disable_warnings = ["module-not-imported"]

[tool.coverage.report]
omit = [
    "src/agilab/About_agilab.py",
    "src/agilab/lab_run.py",
    "src/agilab/pages/*.py",
]
