[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "agi-core",
    "agi-env",
    "agi-lab",
]

[tool.uv.sources]
agi-core = { path = "agi_core-0.1.0-py3-none-any.whl" }
agi-env = { path = "agi_env-0.1.0-py3-none-any.whl" }
agi-lab = { path = "agi_lab-0.1.0-py3-none-any.whl" }
