[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "agi-core",
    "agi-env",
    "agi-gui",
]

[tool.uv.sources]
agi-core = { path = "agi_core-0.1.0-py3-none-any.whl" }
agi-env = { path = "agi_env-0.1.0-py3-none-any.whl" }
agi-gui = { path = "agi_gui-0.1.0-py3-none-any.whl" }
