[project]
name = "views"
version = "0.6.5"
description = "Default template for PDM package"
authors = [
    { name = "", email = "" },
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.mypy]
mypy_path = ["stubs"]
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pyment]
source_dir = "src"
format = "google"