[project]
name = "agi-core"
version = "0.3.61"
description = "agi-core is a framework to explore AI for engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cluster", "node", "env"]
exclude = [
    ".idea*",
    "test*",
    "build",
]
