[project]
name = "agi-core"
version = "0.3.66"
description = "agi-core is a framework to explore AI for engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agi-cluster",
    "agi-node",
    "agi-env"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
