[project]
name = "agi-gui"
description = "AGI GUI"
version = "0.4.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Jean-Pierre Morard", email = "focus@thalesgroup.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = [
    "jupyter",
    "mlflow",
    "asyncio",
    "dask",
    "rapids",
    "streamlit",
    "distributed",
    "cython",
    "cluster",
    "dataframe",
    "dataset",
    "loadbalancing",
    "genai",
    "copilot",
    "agi",
    "pycharm",
    "datascience",
]
dependencies = [
    "agi-env",
    "agi-cluster",
    "astor",
    "fastparquet",
    "geojson",
    "humanize",
    "jupyter-ai[all]",
    "keras",
    "matplotlib",
    "mlflow",
    "networkx",
    "numba",
    "openai",
    "pathspec",
    "plotly",
    "polars",
    "py7zr",
    "seaborn",
    "streamlit",
    "streamlit-modal",
    "streamlit_code_editor",
    "streamlit_extras",
    "tomli",
    "ydata",
    "tomli_w",
    "asyncssh",
    "watchdog",
]

[project.urls]
Documentation = "https://thalesgroup.github.io/agilab"
Source = "https://github.com/ThalesGroup/agilab/tree/main/src/agilab/fwk/gui"
Tracker = "https://github.com/ThalesGroup/agilab/issue"

[project.scripts]
agilab = "agi_gui.lab_run:main"

[dependency-groups]
dev = [
    "black",
    "pytest",
    "licensecheck",
    "ipython==8.34.0",
]

[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.setuptools.data-files]
agi_gui = [
    "src/*.toml",
    "src/*.ipynb",
    "src/resources/*",
    "src/resources/.agilab/*"
]

[tool.uv.sources.agi-env]
path = "../core/env"
editable = true

[tool.uv.sources.agi-cluster]
path = "../core/cluster"
editable = true

[tool.mypy]
mypy_path = [
    "stubs",
]
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pyment]
source_dir = "src"
format = "google"
