[project]
name = "agi-lab"
version = "0.1.0"
description = "AGI LAB"
requires-python = "==3.12.*"
keywords = [ "dask parallel distributed Cython processpool",]
readme = "README.md"
dependencies = [ "agi-core", "astor", "fastparquet", "geojson", "humanize", "jupyter-ai[all]", "keras", "matplotlib", "mlflow", "numba", "openai", "paramiko", "pathspec", "plotly", "polars", "py7zr", "seaborn", "scp", "streamlit", "streamlit-modal", "streamlit-pandas-profiling", "streamlit_code_editor", "streamlit_extras", "ydata", "ydata-profiling",]
[[project.authors]]
name = "Jean-Pierre Morard"
email = "focus@thalesgroup.com"

[dependency-groups]
dev = [ "black", "pytest", "licensecheck",]

[project.license]
text = "BSD 3-Clause License"

[tool.uv]
default-groups = [ "dev",]

[tool.mypy]
mypy_path = [ "stubs",]
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pyment]
source_dir = "src"
format = "google"

[project.scripts]
agilab = "agi_lab.AGILAB:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
agi_lab = ["resources/.agilab/*/*"]