[project]
name = "agi-lab"
version = "0.1.0"
description = "AGI LAB"
requires-python = "==3.12.*"
readme = "README.md"
authors = [
    { name = "Jean-Pierre Morard", email = "focus@thalesgroup.com" }
]
license = { text = "BSD 3-Clause License" }

keywords = [
    "dask", "parallel", "distributed", "Cython", "processpool"
]

dependencies = [
    "agi-core", "astor", "fastparquet", "geojson", "humanize",
    "jupyter-ai[all]", "keras", "matplotlib", "mlflow", "numba",
    "openai", "paramiko", "pathspec", "plotly", "polars", "py7zr",
    "seaborn", "scp", "streamlit", "streamlit-modal",
    "streamlit-pandas-profiling", "streamlit_code_editor",
    "streamlit_extras", "ydata", "ydata-profiling"
]

[dependency-groups]
dev = [
    "black", "pytest", "licensecheck"
]

[project.scripts]
agilab = "agi_lab.lab_run:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
agi_lab = ["resources/.agilab/*/*"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources.agi-env]
path = "/home/pcm/agilab/src/fwk/env"
editable = true

[tool.uv.sources.agi-core]
path = "/home/pcm/agilab/src/fwk/core"
editable = true

[tool.mypy]
mypy_path = ["stubs"]
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pyment]
source_dir = "src"
format = "google"